k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devopssrepractice
  labels:
    app.kubernetes.io/part-of: devopssrepractice
