k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devopssrepractice
  labels:
    app.kubernetes.io/part-of: devopssrepractice
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod      # Requires cert-manager
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - devopssrepractice.com
        - api.devopssrepractice.com
      secretName: devopssrepractice-tls
  rules:
    # Frontend
    - host: devopssrepractice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
    # API
    - host: api.devopssrepractice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
